fix popup z-index

--- a/app/scss/_popup.scss
+++ b/app/scss/_popup.scss
@@ -1,6 +1,6 @@
 .popup__callback, .popup__order {
   display: none;
-  z-index: 9;
+  z-index: 9999;
   width:100%;
   min-height:100%;
   background-color: rgba(0,0,0,0.5);
